# Community-Patch-DLL

./: .gitignore  Civ5XP_hook.cpp  commit_id.inc.in  compat.h  install.sh  meson-clang.txt  meson-gcc.txt  meson.build  meson_options.txt  package.py  uninstall.sh
.github/workflows/: build-linux.yml
CvGameCoreDLLUtil/include/: CvAssert.h  CvDllInterfaces.h  CvDllInterfaces2.h  CvEnums.h  CvLuaMethodWrapper.h  CvWeightedVector.h
CvGameCoreDLL_Expansion2/: CustomMods.h  CvAIOperation.cpp  CvAStar.cpp  CvAchievementInfo.cpp  CvAchievementInfo.h  CvAchievementUnlocker.cpp  CvAchievementUnlocker.h  CvAdvisorCounsel.cpp  CvAdvisorRecommender.cpp  CvBarbarians.cpp  CvBarbarians.h  CvBeliefClasses.cpp  CvBeliefClasses.h  CvBitfield.h  CvBuilderTaskingAI.cpp  CvBuildingClasses.cpp  CvBuildingClasses.h  CvBuildingProductionAI.cpp  CvBuildingProductionAI.h  CvCity.cpp  CvCityCitizens.cpp  CvCityCitizens.h  CvCityManager.h  CvCitySpecializationAI.h  CvCityStrategyAI.cpp  CvCityStrategyAI.h  CvContractClasses.cpp  CvContractClasses.h  CvCorporationClasses.cpp  CvCorporationClasses.h  CvCultureClasses.h  CvDangerPlots.h  CvDatabaseUtility.cpp  CvDatabaseUtility.h  CvDealAI.cpp  CvDealAI.h  CvDealClasses.h  CvDiplomacyAI.cpp  CvDiplomacyAI.h  CvDiplomacyAIEnums.h  (+170 more)
CvGameCoreDLL_Expansion2/Lua/: CvLuaArea.cpp  CvLuaArea.h  CvLuaArgsHandle.cpp  CvLuaArgsHandle.h  CvLuaCity.cpp  CvLuaDeal.cpp  CvLuaDeal.h  CvLuaEnums.cpp  CvLuaEnums.h  CvLuaFractal.cpp  CvLuaFractal.h  CvLuaGame.cpp  CvLuaGame.h  CvLuaGameInfo.cpp  CvLuaLeague.cpp  CvLuaMap.cpp  CvLuaMap.h  CvLuaPlayer.cpp  CvLuaPlot.cpp  CvLuaPlot.h  CvLuaScopedInstance.h  CvLuaSupport.cpp  CvLuaTeam.cpp  CvLuaTeamTech.cpp  CvLuaUnit.cpp
CvGameDatabase/include/: DatabaseResults.h  ResultsCache.h
CvWorldBuilderMap/include/: CvWorldBuilderMapElementAllocator.h
FirePlace/include/FireWorks/: FAssert.h  FAutoVariableBase.h  FFastAllocator.h  FFastList.h  FFastVector.h  FFireTypes.h  FIGameIniParser.h  FObjectPool.h  FSTLBlockAllocatorMT.h  FStlContainerSerialization.h  FString.h  FStringA.inl  FStringW.inl  FTempHeap.h  FVariableSystem.h
FirePlace/include/FireWorks/FLua/include/: FLuaCommon.h
