CvGameCoreDLL_Expansion2 = shared_module('CvGameCoreDLL_Expansion2',
  dependencies: [libcxx],
  cpp_args: dll_cpp_args,
  cpp_pch: './CvGameCoreDLLPCH.h',
  gnu_symbol_visibility: 'hidden',
  include_directories: dll_include_dirs,
  sources: [
    commit_id_inc,
    'CustomMods.cpp',
    'CvAchievementInfo.cpp',
    'CvAchievementUnlocker.cpp',
    'CvAdvisorCounsel.cpp',
    'CvAdvisorRecommender.cpp',
    'CvAIOperation.cpp',
    'CvArea.cpp',
    'CvArmyAI.cpp',
    'CvAStar.cpp',
    'CvAStarNode.cpp',
    'CvBarbarians.cpp',
    'CvBeliefClasses.cpp',
    'CvBuilderTaskingAI.cpp',
    'CvBuildingClasses.cpp',
    'CvBuildingProductionAI.cpp',
    'CvCityAI.cpp',
    'CvCityCitizens.cpp',
    'CvCityConnections.cpp',
    'CvCity.cpp',
    'CvCityManager.cpp',
    'CvCitySpecializationAI.cpp',
    'CvCityStrategyAI.cpp',
    'CvContractClasses.cpp',
    'CvCorporationClasses.cpp',
    'CvCultureClasses.cpp',
    'CvDangerPlots.cpp',
    'CvDatabaseUtility.cpp',
    'CvDealAI.cpp',
    'CvDealClasses.cpp',
    'CvDiplomacyAI.cpp',
    'CvDiplomacyRequests.cpp',
    'CvDistanceMap.cpp',
    'CvDllBuildInfo.cpp',
    'CvDllBuildingInfo.cpp',
    'CvDllCity.cpp',
    'CvDllCivilizationInfo.cpp',
    'CvDllColorInfo.cpp',
    'CvDllCombatInfo.cpp',
    'CvDllContext.cpp',
    'CvDllDatabaseUtility.cpp',
    'CvDllDealAI.cpp',
    'CvDllDeal.cpp',
    'CvDllDiplomacyAI.cpp',
    'CvDllDlcPackageInfo.cpp',
    'CvDllEraInfo.cpp',
    'CvDllFeatureInfo.cpp',
    'CvDllGameAsynch.cpp',
    'CvDllGame.cpp',
    'CvDllGameDeals.cpp',
    'CvDllGameOptionInfo.cpp',
    'CvDllGameSpeedInfo.cpp',
    'CvDllHandicapInfo.cpp',
    'CvDllImprovementInfo.cpp',
    'CvDllInterfaceModeInfo.cpp',
    'CvDllLeaderheadInfo.cpp',
    'CvDllMap.cpp',
    'CvDllMinorCivInfo.cpp',
    'CvDllMissionData.cpp',
    'CvDllMissionInfo.cpp',
    'CvDllNetInitInfo.cpp',
    'CvDllNetLoadGameInfo.cpp',
    'CvDllNetMessageExt.cpp',
    'CvDllNetMessageHandler.cpp',
    'CvDllNetworkSyncronization.cpp',
    'CvDllPathFinderUpdate.cpp',
    'CvDllPlayerColorInfo.cpp',
    'CvDllPlayer.cpp',
    'CvDllPlayerOptionInfo.cpp',
    'CvDllPlot.cpp',
    'CvDllPolicyInfo.cpp',
    'CvDllPreGame.cpp',
    'CvDllPromotionInfo.cpp',
    'CvDllRandom.cpp',
    'CvDllResourceInfo.cpp',
    'CvDllScriptSystemUtility.cpp',
    'CvDllTeam.cpp',
    'CvDllTechInfo.cpp',
    'CvDllTerrainInfo.cpp',
    'CvDllUnitCombatClassInfo.cpp',
    'CvDllUnit.cpp',
    'CvDllUnitInfo.cpp',
    'CvDllVictoryInfo.cpp',
    'CvDllWorldBuilderMapLoader.cpp',
    'CvDllWorldInfo.cpp',
    'CvEconomicAI.cpp',
    'CvEmphasisClasses.cpp',
    'CvEspionageClasses.cpp',
    'CvEventLog.cpp',
    'CvFlavorManager.cpp',
    'CvFractal.cpp',
    'CvGameCoreDLL.cpp',
    'CvGameCoreEnumSerialization.cpp',
    'CvGameCoreStructs.cpp',
    'CvGameCoreUtils.cpp',
    'CvGame.cpp',
    'CvGameQueries.cpp',
    'CvGameTextMgr.cpp',
    'CvGlobals.cpp',
    'CvGoodyHuts.cpp',
    'CvGrandStrategyAI.cpp',
    'CvGreatPersonInfo.cpp',
    'CvHomelandAI.cpp',
    'CvImprovementClasses.cpp',
    'CvInfos.cpp',
    'CvInfosSerializationHelper.cpp',
    'CvInternalGameCoreUtils.cpp',
    'CvLoggerCSV.cpp',
    'CvMap.cpp',
    'CvMapGenerator.cpp',
    'CvMilitaryAI.cpp',
    'CvMinorCivAI.cpp',
    'CvNotificationClasses.cpp',
    'CvNotifications.cpp',
    'CvPlayerAI.cpp',
    'CvPlayer.cpp',
    'CvPlayerManager.cpp',
    'CvPlot.cpp',
    'CvPlotInfo.cpp',
    'CvPlotManager.cpp',
    'CvPolicyAI.cpp',
    'CvPolicyClasses.cpp',
    'CvPopupInfoSerialization.cpp',
    'CvPreGame.cpp',
    'CvProcessProductionAI.cpp',
    'CvProjectClasses.cpp',
    'CvProjectProductionAI.cpp',
    'CvPromotionClasses.cpp',
    'CvRandom.cpp',
    'CvReligionClasses.cpp',
    'CvReplayInfo.cpp',
    'CvReplayMessage.cpp',
    'CvSerialize.cpp',
    'CvSiteEvaluationClasses.cpp',
    'CvStartPositioner.cpp',
    'CvTacticalAI.cpp',
    'CvTacticalAnalysisMap.cpp',
    'CvTargeting.cpp',
    'CvTeam.cpp',
    'CvTechAI.cpp',
    'CvTechClasses.cpp',
    'CvTradeClasses.cpp',
    'CvTraitClasses.cpp',
    'CvTreasury.cpp',
    'CvTypes.cpp',
    'CvUnitClasses.cpp',
    'CvUnitCombat.cpp',
    'CvUnit.cpp',
    'CvUnitCycler.cpp',
    'CvUnitMission.cpp',
    'CvUnitMovement.cpp',
    'CvUnitProductionAI.cpp',
    'CvVotingClasses.cpp',
    'CvWonderProductionAI.cpp',
    'CvWorldBuilderMapLoader.cpp',
    'cvStopWatch.cpp',
    'Lua/CvLuaArea.cpp',
    'Lua/CvLuaArgsHandle.cpp',
    'Lua/CvLuaCity.cpp',
    'Lua/CvLuaDeal.cpp',
    'Lua/CvLuaEnums.cpp',
    'Lua/CvLuaFractal.cpp',
    'Lua/CvLuaGame.cpp',
    'Lua/CvLuaGameInfo.cpp',
    'Lua/CvLuaLeague.cpp',
    'Lua/CvLuaMap.cpp',
    'Lua/CvLuaPlayer.cpp',
    'Lua/CvLuaPlot.cpp',
    'Lua/CvLuaSupport.cpp',
    'Lua/CvLuaTeam.cpp',
    'Lua/CvLuaTeamTech.cpp',
    'Lua/CvLuaUnit.cpp',
  ]
)
